--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <li><a href="#inicio" class="seleccionado" onclick="seleccionar(this)">INICIO</a></li>
                             <li><a href="#sobremi" onclick="seleccionar(this)">SOBRE MI</a></li>
                             <li><a href="#servicios" onclick="seleccionar(this)">SERVICIOS</a></li>
-                            <li><a href="#portfolio" onclick="seleccionar(this)">PORTAFOLIO</a></li>
+                            <li><a href="#portfolio" onclick="seleccionar(this)">PORTFOLIO</a></li>
                             <li><a href="#contacto" onclick="seleccionar(this)">CONTACTO</a></li>
                         </ul>
                     </nav>
@@ -201,7 +201,7 @@
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto1.jpg" alt="">
+                <img src="docs/proyecto1.jpg" alt="">
                 <div class="info">
                     <h4>Wolfprint</h4>
                     <p>Web de diseño gráfico que ofrece servicios de troquelado, impresiones, pendones,serigrafía,etc</p>
@@ -209,7 +209,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto2.jpg" alt="">
+                <img src="docs/proyecto2.jpg" alt="">
                 <div class="info">
                     <h4>EmpleaSecurity</h4>
                     <p>Web realizada para empresa de seguridad, que prestaba servicios en diferentes empresas importantes de retail, entidades bancarias, supermercados etc. </p>
@@ -217,7 +217,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto3.jpg" alt="">
+                <img src="docs/proyecto3.jpg" alt="">
                 <div class="info">
                     <h4>Repositorio interno empresa de cursos Elearning</h4>
                     <p>Se realizó un repositorio interno para ver contenidos que contenían en plataforma moodle, con Scorms, Flipbook y Podcast y contenido interactivo H5p. </p>
@@ -227,7 +227,7 @@
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto4.jpg" alt="">
+                <img src="docs/proyecto4.jpg" alt="">
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
                     <p>Diseño Web</p>
@@ -235,7 +235,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto5.jpg" alt="">
+                <img src="docs/proyecto5.jpg" alt="">
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
                     <p>Diseño Web</p>
@@ -243,7 +243,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto6.jpg" alt="">
+                <img src="docs/proyecto6.jpg" alt="">
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
                     <p>Diseño Web</p>
@@ -253,7 +253,7 @@
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto7.jpg" alt="">
+                <img src="docs/proyecto7.jpg" alt="">
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
                     <p>Diseño Web</p>
@@ -261,7 +261,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto8.jpg" alt="">
+                <img src="docs/proyecto8.jpg" alt="">
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
                     <p>Diseño Web</p>
@@ -269,7 +269,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto9.jpg" alt="">
+                <img src="docs/proyecto9.jpg" alt="">
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
                     <p>Diseño Web</p>
