--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- SECCION S O B R E M I -->
     <section id="sobremi">
         <div class="contenedor-foto">
-            <img src="img/yo-web.png" alt="">
+            <img src="yo-web.png" alt="">
         </div>
         <div class="sobremi">
             <p class="titulo-seccion">Sobre Mi</p>
